bdr.BDR.scala.error
Compilation error:
BDR:5: error: not found: value getIndication
  x=getIndication();
    ^